# my-stadium-2

./: media  pyproject.toml  qodana.sarif.json  qodana.yaml  requirements.txt
.github/workflows/: django.yml  goball-backend.yml
app/: __init__.py  config.py
app/api/: __main__.py  main.py
app/api/controllers/: __init__.py  admin.py  auth.py  booking.py  stadium.py  todo.py  user.py
app/api/dependencies/: __init__.py  authentication.py  database.py  redis_passcode_manager.py  settings.py
app/api/middlewares/: exception.py
app/dto/: __init__.py  admin.py  base.py  booking.py  profile.py  role.py  stadium.py  stadium2.py  todo.py  types.py  user.py
app/infrastructure/database/: factory.py
app/infrastructure/database/alembic/: env.py
app/infrastructure/database/alembic/versions/: 0748c9bd02a6_image_edited.py  090344216b2f_m2m.py  1f5990812f0b_status_default_new.py  2a5d7cf3c933_role_logig_redefined2.py  2d4bc701bda1_role_logig_redefined3.py  2e608b4ae93b_model_stadium_added.py  4d0fe4a8415b_third.py  52f52e28a541_user_changed.py  5ce8f5080fda_role_logig_redefined.py  6c0421b7d243_password_removed.py  6f930af76c8f_relation.py  73ab9987a636_last.py  7b911c11feb9_role_logig_redefined3.py  9a2a57c03f77_overlap_false.py  a2b318c2a746_second.py  a5bcfcd84c25_lat_long_added.py  ac308b400666_user_changed2.py  b71ed8e6291b_secondary_changed.py  (+6 more)
app/infrastructure/database/dao/: __init__.py  holder.py
app/infrastructure/database/models/: __init__.py  base.py  booking.py  profile.py  role.py  stadium.py  todo.py  user.py
app/media/: user_data.xlsx
(+8 files in other folders)
