[tool.poetry]
name = "task-manager-api"
version = "0.1.0"
description = ""
authors = ["sabdukodirov <abdukodirovsamandar3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.1"
pydantic = "^2.6.4"
alembic = "^1.13.1"
uvicorn = "0.28.0"
pydantic-settings = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
